Some changes to sol1 file

--- a/homework/Homework1_solution_Group19.ipynb
+++ b/homework/Homework1_solution_Group19.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_excel('../data/multi_asset_etf_data.xlsx')"
+    "df=pd.read_excel('../data/multi_asset_etf_data.xlsx', sheet_name=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -44,171 +44,222 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>shortName</th>\n",
-       "      <th>quoteType</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>volume</th>\n",
-       "      <th>totalAssets</th>\n",
-       "      <th>longBusinessSummary</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>BWX</th>\n",
+       "      <th>DBC</th>\n",
+       "      <th>EEM</th>\n",
+       "      <th>EFA</th>\n",
+       "      <th>HYG</th>\n",
+       "      <th>IEF</th>\n",
+       "      <th>IYR</th>\n",
+       "      <th>PSP</th>\n",
+       "      <th>QAI</th>\n",
+       "      <th>SPY</th>\n",
+       "      <th>TIP</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>SPY</td>\n",
-       "      <td>SPDR S&amp;P 500</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>42926953</td>\n",
-       "      <td>412799303680</td>\n",
-       "      <td>The Trust seeks to achieve its investment obje...</td>\n",
+       "      <td>2009-04-30</td>\n",
+       "      <td>0.008441</td>\n",
+       "      <td>-0.001553</td>\n",
+       "      <td>0.155030</td>\n",
+       "      <td>0.114637</td>\n",
+       "      <td>0.137907</td>\n",
+       "      <td>-0.028004</td>\n",
+       "      <td>0.295598</td>\n",
+       "      <td>0.229650</td>\n",
+       "      <td>0.022329</td>\n",
+       "      <td>0.098793</td>\n",
+       "      <td>-0.018505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>EFA</td>\n",
-       "      <td>iShares MSCI EAFE ETF</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>9234292</td>\n",
-       "      <td>48446230528</td>\n",
-       "      <td>The fund generally will invest at least 80% of...</td>\n",
+       "      <td>2009-05-31</td>\n",
+       "      <td>0.054143</td>\n",
+       "      <td>0.163134</td>\n",
+       "      <td>0.159871</td>\n",
+       "      <td>0.132389</td>\n",
+       "      <td>0.029026</td>\n",
+       "      <td>-0.020303</td>\n",
+       "      <td>0.023198</td>\n",
+       "      <td>0.054363</td>\n",
+       "      <td>0.028336</td>\n",
+       "      <td>0.058925</td>\n",
+       "      <td>0.020437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>EEM</td>\n",
-       "      <td>iShares MSCI Emerging Index Fun</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>21697929</td>\n",
-       "      <td>21355970560</td>\n",
-       "      <td>The fund generally will invest at least 80% of...</td>\n",
+       "      <td>2009-06-30</td>\n",
+       "      <td>0.004550</td>\n",
+       "      <td>-0.026858</td>\n",
+       "      <td>-0.023094</td>\n",
+       "      <td>-0.014648</td>\n",
+       "      <td>0.032919</td>\n",
+       "      <td>-0.006170</td>\n",
+       "      <td>-0.025462</td>\n",
+       "      <td>0.041443</td>\n",
+       "      <td>-0.004035</td>\n",
+       "      <td>-0.001254</td>\n",
+       "      <td>0.001383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>PSP</td>\n",
-       "      <td>Invesco Global Listed Private E</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2557</td>\n",
-       "      <td>214931952</td>\n",
-       "      <td>The fund generally will invest at least 90% of...</td>\n",
+       "      <td>2009-07-31</td>\n",
+       "      <td>0.031312</td>\n",
+       "      <td>0.018595</td>\n",
+       "      <td>0.110173</td>\n",
+       "      <td>0.100442</td>\n",
+       "      <td>0.069217</td>\n",
+       "      <td>0.008344</td>\n",
+       "      <td>0.105826</td>\n",
+       "      <td>0.143274</td>\n",
+       "      <td>0.015353</td>\n",
+       "      <td>0.074633</td>\n",
+       "      <td>0.000906</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>QAI</td>\n",
-       "      <td>IQ Hedge MultiIQ Hedge Multi-St</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>16734</td>\n",
-       "      <td>624121728</td>\n",
-       "      <td>The fund is a \"fund of funds\" which means it i...</td>\n",
+       "      <td>2009-08-31</td>\n",
+       "      <td>0.007193</td>\n",
+       "      <td>-0.040800</td>\n",
+       "      <td>-0.013571</td>\n",
+       "      <td>0.044595</td>\n",
+       "      <td>-0.017404</td>\n",
+       "      <td>0.007199</td>\n",
+       "      <td>0.131504</td>\n",
+       "      <td>0.032977</td>\n",
+       "      <td>-0.004586</td>\n",
+       "      <td>0.036504</td>\n",
+       "      <td>0.007979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>HYG</td>\n",
-       "      <td>iShares iBoxx $ High Yield Corp</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>18515962</td>\n",
-       "      <td>14783441920</td>\n",
-       "      <td>The underlying index is a rules-based index co...</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>DBC</td>\n",
-       "      <td>Invesco DB Commodity Index Trac</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>506418</td>\n",
-       "      <td>2091483648</td>\n",
-       "      <td>The fund pursues its investment objective by i...</td>\n",
+       "      <th>168</th>\n",
+       "      <td>2023-04-30</td>\n",
+       "      <td>-0.005609</td>\n",
+       "      <td>-0.010679</td>\n",
+       "      <td>-0.011460</td>\n",
+       "      <td>0.026266</td>\n",
+       "      <td>-0.001076</td>\n",
+       "      <td>0.005051</td>\n",
+       "      <td>0.006090</td>\n",
+       "      <td>0.031522</td>\n",
+       "      <td>0.002038</td>\n",
+       "      <td>0.012878</td>\n",
+       "      <td>-0.002579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>IYR</td>\n",
-       "      <td>iShares U.S. Real Estate ETF</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>4115950</td>\n",
-       "      <td>2840025600</td>\n",
-       "      <td>The fund seeks to track the investment results...</td>\n",
+       "      <th>169</th>\n",
+       "      <td>2023-05-31</td>\n",
+       "      <td>-0.029213</td>\n",
+       "      <td>-0.067345</td>\n",
+       "      <td>-0.027276</td>\n",
+       "      <td>-0.043324</td>\n",
+       "      <td>-0.015567</td>\n",
+       "      <td>-0.017636</td>\n",
+       "      <td>-0.043519</td>\n",
+       "      <td>-0.022374</td>\n",
+       "      <td>-0.009725</td>\n",
+       "      <td>0.001363</td>\n",
+       "      <td>-0.015214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>IEF</td>\n",
-       "      <td>iShares 7-10 Year Treasury Bond</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>4696390</td>\n",
-       "      <td>28524961792</td>\n",
-       "      <td>The underlying index measures the performance ...</td>\n",
+       "      <th>170</th>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>0.003433</td>\n",
+       "      <td>0.024730</td>\n",
+       "      <td>0.039240</td>\n",
+       "      <td>0.039952</td>\n",
+       "      <td>0.013053</td>\n",
+       "      <td>-0.017301</td>\n",
+       "      <td>0.052634</td>\n",
+       "      <td>0.042028</td>\n",
+       "      <td>0.017877</td>\n",
+       "      <td>0.060051</td>\n",
+       "      <td>-0.008147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>BWX</td>\n",
-       "      <td>SPDR Bloomberg International Tr</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>58614</td>\n",
-       "      <td>898953088</td>\n",
-       "      <td>The fund generally invests substantially all, ...</td>\n",
+       "      <th>171</th>\n",
+       "      <td>2023-07-31</td>\n",
+       "      <td>0.005978</td>\n",
+       "      <td>0.083389</td>\n",
+       "      <td>0.056579</td>\n",
+       "      <td>0.023199</td>\n",
+       "      <td>0.007320</td>\n",
+       "      <td>-0.010352</td>\n",
+       "      <td>0.013613</td>\n",
+       "      <td>0.060803</td>\n",
+       "      <td>0.015608</td>\n",
+       "      <td>0.028898</td>\n",
+       "      <td>-0.003425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>TIP</td>\n",
-       "      <td>iShares TIPS Bond ETF</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>1199516</td>\n",
-       "      <td>21275783168</td>\n",
-       "      <td>The index tracks the performance of inflation-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>SHV</td>\n",
-       "      <td>iShares Short Treasury Bond ETF</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>1570037</td>\n",
-       "      <td>20401782784</td>\n",
-       "      <td>The fund will invest at least 80% of its asset...</td>\n",
+       "      <th>172</th>\n",
+       "      <td>2023-08-31</td>\n",
+       "      <td>-0.030097</td>\n",
+       "      <td>-0.011945</td>\n",
+       "      <td>-0.058835</td>\n",
+       "      <td>-0.039836</td>\n",
+       "      <td>-0.001745</td>\n",
+       "      <td>-0.013545</td>\n",
+       "      <td>-0.029459</td>\n",
+       "      <td>-0.040854</td>\n",
+       "      <td>-0.006219</td>\n",
+       "      <td>-0.019057</td>\n",
+       "      <td>-0.014430</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>173 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ticker                        shortName quoteType currency    volume  \\\n",
-       "0     SPY                     SPDR S&P 500       ETF      USD  42926953   \n",
-       "1     EFA            iShares MSCI EAFE ETF       ETF      USD   9234292   \n",
-       "2     EEM  iShares MSCI Emerging Index Fun       ETF      USD  21697929   \n",
-       "3     PSP  Invesco Global Listed Private E       ETF      USD      2557   \n",
-       "4     QAI  IQ Hedge MultiIQ Hedge Multi-St       ETF      USD     16734   \n",
-       "5     HYG  iShares iBoxx $ High Yield Corp       ETF      USD  18515962   \n",
-       "6     DBC  Invesco DB Commodity Index Trac       ETF      USD    506418   \n",
-       "7     IYR     iShares U.S. Real Estate ETF       ETF      USD   4115950   \n",
-       "8     IEF  iShares 7-10 Year Treasury Bond       ETF      USD   4696390   \n",
-       "9     BWX  SPDR Bloomberg International Tr       ETF      USD     58614   \n",
-       "10    TIP            iShares TIPS Bond ETF       ETF      USD   1199516   \n",
-       "11    SHV  iShares Short Treasury Bond ETF       ETF      USD   1570037   \n",
+       "          Date       BWX       DBC       EEM       EFA       HYG       IEF  \\\n",
+       "0   2009-04-30  0.008441 -0.001553  0.155030  0.114637  0.137907 -0.028004   \n",
+       "1   2009-05-31  0.054143  0.163134  0.159871  0.132389  0.029026 -0.020303   \n",
+       "2   2009-06-30  0.004550 -0.026858 -0.023094 -0.014648  0.032919 -0.006170   \n",
+       "3   2009-07-31  0.031312  0.018595  0.110173  0.100442  0.069217  0.008344   \n",
+       "4   2009-08-31  0.007193 -0.040800 -0.013571  0.044595 -0.017404  0.007199   \n",
+       "..         ...       ...       ...       ...       ...       ...       ...   \n",
+       "168 2023-04-30 -0.005609 -0.010679 -0.011460  0.026266 -0.001076  0.005051   \n",
+       "169 2023-05-31 -0.029213 -0.067345 -0.027276 -0.043324 -0.015567 -0.017636   \n",
+       "170 2023-06-30  0.003433  0.024730  0.039240  0.039952  0.013053 -0.017301   \n",
+       "171 2023-07-31  0.005978  0.083389  0.056579  0.023199  0.007320 -0.010352   \n",
+       "172 2023-08-31 -0.030097 -0.011945 -0.058835 -0.039836 -0.001745 -0.013545   \n",
        "\n",
-       "     totalAssets                                longBusinessSummary  \n",
-       "0   412799303680  The Trust seeks to achieve its investment obje...  \n",
-       "1    48446230528  The fund generally will invest at least 80% of...  \n",
-       "2    21355970560  The fund generally will invest at least 80% of...  \n",
-       "3      214931952  The fund generally will invest at least 90% of...  \n",
-       "4      624121728  The fund is a \"fund of funds\" which means it i...  \n",
-       "5    14783441920  The underlying index is a rules-based index co...  \n",
-       "6     2091483648  The fund pursues its investment objective by i...  \n",
-       "7     2840025600  The fund seeks to track the investment results...  \n",
-       "8    28524961792  The underlying index measures the performance ...  \n",
-       "9      898953088  The fund generally invests substantially all, ...  \n",
-       "10   21275783168  The index tracks the performance of inflation-...  \n",
-       "11   20401782784  The fund will invest at least 80% of its asset...  "
+       "          IYR       PSP       QAI       SPY       TIP  \n",
+       "0    0.295598  0.229650  0.022329  0.098793 -0.018505  \n",
+       "1    0.023198  0.054363  0.028336  0.058925  0.020437  \n",
+       "2   -0.025462  0.041443 -0.004035 -0.001254  0.001383  \n",
+       "3    0.105826  0.143274  0.015353  0.074633  0.000906  \n",
+       "4    0.131504  0.032977 -0.004586  0.036504  0.007979  \n",
+       "..        ...       ...       ...       ...       ...  \n",
+       "168  0.006090  0.031522  0.002038  0.012878 -0.002579  \n",
+       "169 -0.043519 -0.022374 -0.009725  0.001363 -0.015214  \n",
+       "170  0.052634  0.042028  0.017877  0.060051 -0.008147  \n",
+       "171  0.013613  0.060803  0.015608  0.028898 -0.003425  \n",
+       "172 -0.029459 -0.040854 -0.006219 -0.019057 -0.014430  \n",
+       "\n",
+       "[173 rows x 12 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
