--- a/homework/Homework1_solution_Group19.ipynb
+++ b/homework/Homework1_solution_Group19.ipynb
@@ -1543,11 +1543,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mean': 0.11999999999999998,\n",
+       " 'volatility': 0.04600660455244628,\n",
+       " 'sharpe': 2.608321156654872}"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_2021=df.loc[:'2021-12-31']\n"
+    "mut_month=0.01\n",
+    "df_2021=df[df['Date']<'2022']\n",
+    "wt2021=tangency_portfolio(df_2021)\n",
+    "wt2021*=mut_month/(wt2021.T@Matrix(df_2021.iloc[:,1:].mean()))[0]\n",
+    "tarray=np.array(((Matrix(df_2021.iloc[:,1:])@wt2021).T),dtype='float')[0]\n",
+    "calculate_statistics_array(tarray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mean': -0.002685997671791466,\n",
+       " 'volatility': 0.1043065457711476,\n",
+       " 'sharpe': -0.025750998194155942}"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2022=df[df['Date']>='2022']\n",
+    "tarray=np.array(((Matrix(df_2022.iloc[:,1:])@wt2021).T),dtype='float')[0]\n",
+    "calculate_statistics_array(tarray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mean': 0.024999401279745502,\n",
+       " 'volatility': 0.15091735336095813,\n",
+       " 'sharpe': 0.16564961366605024}"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_array=np.array(())\n",
+    "for i in range(2014,2023):\n",
+    "    tdf=df[df['Date']<str(i+1)]\n",
+    "    tdf=tdf[tdf['Date']>str(i)]\n",
+    "    twt=tangency_portfolio(tdf)\n",
+    "    twt*=mut_month/(twt.T@Matrix(tdf.iloc[:,1:].mean()))[0]\n",
+    "    ttdf=df[df['Date']<str(i+2)]\n",
+    "    ttdf=ttdf[ttdf['Date']>str(i+1)]\n",
+    "    tarray=np.array(((Matrix(ttdf.iloc[:,1:])@twt).T),dtype='float')[0]\n",
+    "    res_array=np.concatenate((res_array,tarray),axis=0)\n",
+    "calculate_statistics_array(res_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 5"
    ]
   },
   {
