--- a/homework/Homework1_solution_Group19.ipynb
+++ b/homework/Homework1_solution_Group19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "11   20401782784  The fund will invest at least 80% of its asset...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "[173 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "sharpe      0.694005  0.352573  0.374524  0.976070  0.434424  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "TIP  0.320913  0.459712  0.294639  1.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
        "10     TIP   0.356935242154627"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        " 'sharpe': 1.938434723823231}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,16 +1067,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_notip=df.drop(columns=['TIP'])"
+    "df_notip=df.drop(columns=['TIP']).copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
        "9     SPY    2.73136252419055"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
        " 'sharpe': 1.935986266753024}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,17 +1227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_tip12=df\n",
+    "df_tip12=df.copy()\n",
     "df_tip12['TIP']+=0.0012"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
        "10     TIP     1.86692186487234"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
        " 'sharpe': 2.0368625132828053}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,21 +1394,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mut=0.01*12\n",
+    "mut=0.015\n",
     "\n",
     "mean=[]\n",
-    "for i in stats:\n",
-    "    mean.append(stats[i]['mean'])\n",
-    "    vectmean=Matrix(mean)"
+    "for i in df.columns[1:]:\n",
+    "    mean.append(df[i].mean())\n",
+    "vectmean=Matrix(mean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,13 +1418,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "variances_inv=[]\n",
     "for i in df.columns[1:]:\n",
-    "    variances_inv.append(1/(np.var(df[i])**2))\n",
+    "    variances_inv.append(1/(df[i].var()))\n",
     "\n",
     "RPw=Matrix(variances_inv)\n",
     "RPw*=mut/(RPw.T@vectmean)[0]"
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1489,24 +1489,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.120000</td>\n",
-       "      <td>0.120000</td>\n",
-       "      <td>0.120000</td>\n",
-       "      <td>0.120000</td>\n",
+       "      <td>0.180000</td>\n",
+       "      <td>0.180000</td>\n",
+       "      <td>0.180000</td>\n",
+       "      <td>0.180000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>volatility</th>\n",
-       "      <td>0.058914</td>\n",
-       "      <td>0.207999</td>\n",
-       "      <td>0.201340</td>\n",
-       "      <td>0.086505</td>\n",
+       "      <td>0.092858</td>\n",
+       "      <td>0.318986</td>\n",
+       "      <td>0.325582</td>\n",
+       "      <td>0.140735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sharpe</th>\n",
-       "      <td>2.036863</td>\n",
-       "      <td>0.576926</td>\n",
-       "      <td>0.596007</td>\n",
-       "      <td>1.387207</td>\n",
+       "      <td>1.938435</td>\n",
+       "      <td>0.564288</td>\n",
+       "      <td>0.552856</td>\n",
+       "      <td>1.279001</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1514,12 +1514,12 @@
       ],
       "text/plain": [
        "                  wt       EWw       RPw      REGw\n",
-       "mean        0.120000  0.120000  0.120000  0.120000\n",
-       "volatility  0.058914  0.207999  0.201340  0.086505\n",
-       "sharpe      2.036863  0.576926  0.596007  1.387207"
+       "mean        0.180000  0.180000  0.180000  0.180000\n",
+       "volatility  0.092858  0.318986  0.325582  0.140735\n",
+       "sharpe      1.938435  0.564288  0.552856  1.279001"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1543,82 +1543,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean': 0.11999999999999998,\n",
-       " 'volatility': 0.04600660455244628,\n",
-       " 'sharpe': 2.608321156654872}"
+       "{'mean': 0.18000000000000002,\n",
+       " 'volatility': 0.07136231400986857,\n",
+       " 'sharpe': 2.5223397320763468}"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mut_month=0.01\n",
-    "df_2021=df[df['Date']<'2022']\n",
+    "mut_month=0.015\n",
+    "df_2021=df[df['Date']<'2021'].copy()\n",
     "wt2021=tangency_portfolio(df_2021)\n",
     "wt2021*=mut_month/(wt2021.T@Matrix(df_2021.iloc[:,1:].mean()))[0]\n",
     "tarray=np.array(((Matrix(df_2021.iloc[:,1:])@wt2021).T),dtype='float')[0]\n",
-    "calculate_statistics_array(tarray)"
+    "calculate_statistics_array(tarray)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean': -0.002685997671791466,\n",
-       " 'volatility': 0.1043065457711476,\n",
-       " 'sharpe': -0.025750998194155942}"
+       "{'mean': 0.03049185099780599,\n",
+       " 'volatility': 0.14853632511518966,\n",
+       " 'sharpe': 0.20528211516044723}"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_2022=df[df['Date']>='2022']\n",
+    "df_2022=df[df['Date']>='2021'].copy()\n",
     "tarray=np.array(((Matrix(df_2022.iloc[:,1:])@wt2021).T),dtype='float')[0]\n",
     "calculate_statistics_array(tarray)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean': 0.024999401279745502,\n",
-       " 'volatility': 0.15091735336095813,\n",
-       " 'sharpe': 0.16564961366605024}"
+       "{'mean': 0.12022463648540985,\n",
+       " 'volatility': 0.10221930436412563,\n",
+       " 'sharpe': 1.1761441464827975}"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "res_array=np.array(())\n",
-    "for i in range(2014,2023):\n",
-    "    tdf=df[df['Date']<str(i+1)]\n",
-    "    tdf=tdf[tdf['Date']>str(i)]\n",
+    "for i in range(2013,2023):\n",
+    "    tdf=df[df['Date']<str(i+1)].copy()\n",
+    "    # tdf=tdf[tdf['Date']>str(i)]\n",
     "    twt=tangency_portfolio(tdf)\n",
     "    twt*=mut_month/(twt.T@Matrix(tdf.iloc[:,1:].mean()))[0]\n",
-    "    ttdf=df[df['Date']<str(i+2)]\n",
-    "    ttdf=ttdf[ttdf['Date']>str(i+1)]\n",
+    "    ttdf=df[df['Date']<str(i+2)].copy()\n",
+    "    ttdf=ttdf[ttdf['Date']>str(i+1)].copy()\n",
     "    tarray=np.array(((Matrix(ttdf.iloc[:,1:])@twt).T),dtype='float')[0]\n",
     "    res_array=np.concatenate((res_array,tarray),axis=0)\n",
     "calculate_statistics_array(res_array)"
@@ -1630,6 +1630,20 @@
    "source": [
     "#### Part 5"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
